[gd_scene load_steps=5 format=3 uid="uid://57soqweho2ql"]

[ext_resource type="Script" path="res://Scripts/FloorTile.gd" id="1_5mkuc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3x86t"]
size = Vector3(5, 0.1, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ibxkt"]
albedo_color = Color(0.168627, 0.254902, 0.552941, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_8bhnq"]
material = SubResource("StandardMaterial3D_ibxkt")

[node name="FloorTile" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.9114, 5.07411, 0)
script = ExtResource("1_5mkuc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_3x86t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(2.5, 0, 0, 0, 1, 0, 0, 0, 2.5, 0, 0, 0)
mesh = SubResource("PlaneMesh_8bhnq")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
